--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
       </tr>
       <tr>
         <td bgcolor="#00FFFF">2</td>
-        <td bgcolor="#00FFFF">Tank</td>
+        <td bgcolor="#00FFFF"><a href="https://shicaboo.github.io/Tank/">Tank</a></td>
       </tr>
       <tr>
         <td bgcolor="#9999FF">3</td>
