--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
       </tr>
       <tr>
         <td bgcolor="#FFFF00">1</td>
-        <td bgcolor="#FFFF00"><p>Space war</p></td>
+        <td bgcolor="#FFFF00"><p><a href="https://shicaboo.github.io/spacewar/">Space war</a></p></td>
       </tr>
       <tr>
         <td bgcolor="#00FFFF">2</td>
@@ -53,15 +53,15 @@ body {
       </tr>
       <tr>
         <td bgcolor="#9999FF">3</td>
-        <td bgcolor="#9999FF">THUG Jump</td>
+        <td bgcolor="#9999FF"><a href="https://shicaboo.github.io/THUG-JUMP/">THUG Jump</a></td>
       </tr>
       <tr>
-        <td bgcolor="#00CCCC">&nbsp;</td>
-        <td bgcolor="#00CCCC">&nbsp;</td>
+        <td bgcolor="#00CCCC">4</td>
+        <td bgcolor="#00CCCC"><a href="https://shicaboo.github.io/Bird/">Bird</a></td>
       </tr>
       <tr>
-        <td bgcolor="#99FFFF">&nbsp;</td>
-        <td bgcolor="#99FFFF">&nbsp;</td>
+        <td bgcolor="#99FFFF">5</td>
+        <td bgcolor="#99FFFF"><a href="https://shicaboo.github.io/hunter/">Hunter</a></td>
       </tr>
     </table>
     <p>&nbsp;</p></td>
